--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
         font-family: 'MorrisRoman', 'Franklin Gothic';
         font-size: 25px;
         font-weight: bold;
-        color: white;
+        color: black;
         text-align: center;
         margin: 0;
         padding: 0;
