--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ body {
         z-index: 2;
         font-family: 'MorrisRoman', 'Franklin Gothic';
 }
+.center {
+    display: block;
+    min-width: 300px;
+    max-width: 1300px;
+    background-color: transparent;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    
+}
 @font-face {
     font-family: 'MorrisRoman';
     src: url(fonts/MorrisRomanBlack.ttf);
