--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
     border-style: solid;
-    border-color: silver;
+    border-color: #bf80ff;
     border-width: 0 3px 3px;
 }
 @font-face {
