--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {
 #blog {
     display: flex;
     background-color: ghostwhite;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
     border-style: solid;
