--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
   .title-style {
         font-family: 'MorrisRoman', 'Franklin Gothic';
-        font-size: 25px;
+        font-size: 50px;
         font-weight: bold;
         color: white;
         text-align: center;
@@ -44,3 +44,12 @@ body {
         padding: 0;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     }
+
+
+
+.century{
+	font-family: 'Century Gothic';
+	font-size: 18px;
+	color: black;
+	text-align: center;
+}
