--- a/style.css
+++ b/style.css
@@ -51,9 +51,9 @@ body {
 
 
 
-.century {
+.News {
     font-family: 'NewsGothic', 'Franklin Gothic';
-    font-size: 18px;
+    font-size: 16px;
     color: black;
     text-align: center;
 }
