--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 	color: #333;
 	background: #000000 url("./images//background.jpg");
         z-index: 2;
-        font-family: 'MorrisRoman', 'Franklin Gothic';
+        font-family: 'NewsGothic', 'Franklin Gothic';
 	z-index: 0;
 }
 .center {
