--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ body {
     max-width: 1200px;
     background-color: transparent;
     color: black;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
     border-radius: 10px;
 }
 
