--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
     max-width: 1200px;
     background-color: transparent;
     color: black;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 10px;
 }
 
