--- a/style.css
+++ b/style.css
@@ -58,3 +58,10 @@ font-family: 'NewsGothic';
     text-align: center;
     margin: 7px 0;
 }
+.Morris {
+    font-family: 'Morris', 'Franklin Gothic';
+    font-size: 16px;
+    color: black;
+    text-align: center;
+    margin: 7px 0;
+}
