--- a/style.css
+++ b/style.css
@@ -65,3 +65,10 @@ font-family: 'NewsGothic';
     text-align: center;
     margin: 7px 0;
 }
+.MorrisBig {
+    font-family: 'Morris', 'Franklin Gothic';
+    font-size: 25px;
+    color: 240, 184, 252;
+    text-align: center;
+    margin: 7px 0;
+}
