--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding-top: 2px;
 	padding: 0;
 	color: #333;
-	background: #000000 url("./images//background.jpg");
+	background: #000000 url("./images//macabre.png");
         z-index: 2;
         font-family: 'MorrisRoman', 'Franklin Gothic';
 	z-index: 0;
